<resources>
    <string name="app_name">AVLIX</string>
    <string name="welcome_to_avlyx">Welcome to AVLIX</string>
    <string name="email_address">Enter you email</string>
    <string name="password">Password</string>
    <string name="button_exit">Exit</string>
    <string name="button_close">Close</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_help">Help</string>
    <string name="header_help">Welcome!</string>
    <string name="text_help">AdAway is a free and open-source software design to block advertising. It fetches advertising network addresses to block them on your device.\nWant to know more? Check the help below!</string>
    <string name="button_show_help">Show more help</string>
    <string name="icon_update_status">Update status</string>
    <string name="text_update">All hosts files from the defined sources are downloaded, merged with your own lists and installed as one hosts file on your system.</string>
    <string name="button_enable_hosts">Enable ad-blocking</string>
    <string name="button_disable_hosts">Disable ad-blocking</string>
    <string name="header_webserver">Web server</string>
    <string name="webserver_status_running">Running</string>
    <string name="webserver_status_stopped">Stopped</string>
    <string name="webserver_toggle_text">Start or stop webserver on localhost to answer requests to blocked hostnames.</string>
    <string name="button_enable_webserver">Enable web server</string>
    <string name="button_disable_webserver">Disable web server</string>
    <string name="header_vpn">VPN</string>
    <string name="vpn_status_running">Running</string>
    <string name="vpn_status_stopped">Stopped</string>
    <string name="vpn_toggle_text">Start or stop VPN to filter requests.</string>
    <string name="button_enable_vpn">Enable VPN</string>
    <string name="button_disable_vpn">Disable VPN</string>
    <string name="checkbox_list_context_title">Edit Entry</string>
    <string name="checkbox_list_context_apply">Apply</string>
    <string name="checkbox_list_context_edit">Edit</string>
    <string name="checkbox_list_context_delete">Delete</string>
    <string name="import_dialog">Importing…</string>
    <string name="import_success">Backup successfully imported from your external storage.</string>
    <string name="import_failed">Failed to import backup. Is its format correct? Check logcat for more details.</string>
    <string name="export_dialog">Exporting…</string>
    <string name="export_success">Backup successfully exported to file \'%s\' on your external storage.</string>
    <string name="export_failed">Failed to export backup file \'%s\'.</string>
    <string name="hosts_header">The hosts file</string>
    <string name="hosts_description">The hosts file is a system file that maps hostnames to IP addresses. It is a plain text file which configuration is handled by AdAway. Here are its few first lines:</string>
    <string name="hosts_content">Loading the hosts file content…</string>
    <string name="hosts_open_button">Open the hosts file</string>
    <string name="status_check">Checking for update</string>
    <string name="status_check_source">Checking %s source for update</string>
    <string name="status_retrieve">Retrieving sources</string>
    <string name="status_download_source">Downloading source %s</string>
    <string name="status_read_source">Reading source %s</string>
    <string name="status_parse_source">Parsing %s source</string>
    <string name="status_sync_database">Syncing rule database</string>
    <string name="status_revert">Reverting to default hosts file</string>
    <string name="status_revert_done">Default hosts file restored</string>
    <string name="status_reverting_subtitle">Creating standard hosts file</string>
    <string name="status_update_available">Source update available</string>
    <string name="status_update_available_subtitle">Newer hosts files available</string>
    <string name="status_no_update_found">No source update found</string>
    <string name="status_no_connection">No Internet connection</string>
    <string name="status_no_connection_subtitle">No Internet connection available</string>
    <string name="status_download_fail">Unavailable sources</string>
    <string name="status_download_fail_subtitle_new">No hosts sources are reachable!</string>
    <string name="status_root_access_denied">Root access denied</string>
    <string name="status_root_access_denied_subtitle">Allow root access from your root app</string>
    <string name="status_failure">Something went wrong</string>
    <string name="status_failure_subtitle">Check the logcat for more details</string>
    <string name="status_enabled">Enabled</string>
    <string name="status_enabled_subtitle">Newest hosts files enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_disabled_subtitle">Default hosts file installed</string>
    <string name="status_apply_sources">Apply latest sources</string>
    <string name="status_create_new_hosts">Creating a new hosts file</string>
    <string name="status_copy_new_hosts">Copying a new hosts file</string>
    <string name="status_check_copy">Checking hosts file copy</string>
    <string name="status_hosts_updated">Hosts file successfully updated</string>
    <string name="status_vpn_configuration_updated">VPN configuration successfully updated</string>
    <string name="notification_configuration_changed">Your configuration changed. You need to apply it.</string>
    <string name="notification_configuration_changed_action">Apply</string>
    <string name="notification_configuration_installing">Applying new configuration…</string>
    <string name="notification_configuration_failed">Failed to apply new configuration.</string>
    <string name="apply_symlink_missing_status">The symlink to the hosts file target is missing</string>
    <string name="apply_symlink_missing">Symlink from your target to /system/etc/hosts is not existing or incorrect! AdAway will not work if it is not pointing to the right file.\n\nDo you want to try creating a symlink?</string>
    <string name="apply_symlink_missing_title">Symlink missing</string>
    <string name="apply_not_enough_space">Not enough space on the partition!\nTry changing the target hosts file in preferences to /data/data/hosts.</string>
    <string name="apply_not_enough_space_title">Not enough space</string>
    <string name="apply_private_file_fail">Downloaded file could not be read.</string>
    <string name="apply_private_file_fail_title">Private file fail</string>
    <string name="apply_remount_fail">Remounting the partition as read/write failed!</string>
    <string name="apply_remount_fail_title">Remount failed</string>
    <string name="apply_copy_fail_status">Failed to copy hosts file</string>
    <string name="apply_copy_fail">Copying of hosts file failed!</string>
    <string name="apply_copy_fail_title">Copy failed</string>
    <string name="apply_success_subtitle">Applied hosts sources</string>
    <string name="apply_success_title">Applying successful</string>
    <string name="apply_success_dialog">Applying was successful.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the SD card at the moment!)</string>
    <string name="apply_symlink_successful">Symlink was created successful.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the SD card at the moment!)</string>
    <string name="apply_symlink_successful_title">Symlink creation successful</string>
    <string name="apply_symlink_fail">Symlink could not be created by Android.\nThis fails mostly due to a \'feature\' called S-ON on HTC phones!\n\nA solution is to boot your phone into recovery mode and create the symlink there with \'ln -s /data/data/hosts /system/etc/hosts\'.\n\nIf this does not work search the Internet for S-OFF and your phone.</string>
    <string name="apply_symlink_fail_title">Symlink creation failed</string>
    <string name="apply_help">Please read Help for more information.</string>
    <string name="apply_apn_proxy">An APN proxy is set on your Android!\nAdAway will not work reliably when on Mobile Networks like 3G. You can deactivate that proxy by going to your selected APN (From the Settings app: Network &amp; Internet -> Mobile network -> Advanced -> Access Point Names) and remove the value in the proxy field.</string>
    <string name="apply_apn_proxy_title">APN proxy set!</string>
    <string name="no_connection">The connection to the Internet is not working.</string>
    <string name="no_connection_title">No Connection</string>
    <string name="download_dialog">Downloading…</string>
    <string name="apply_dialog">Applying…</string>
    <string name="apply_dialog_lists">Applying Blacklist and Whitelist</string>
    <string name="apply_dialog_hostnames">Parsing and merging hosts files</string>
    <string name="apply_dialog_hosts">Building hosts file</string>
    <string name="apply_dialog_apply">Applying hosts file</string>
    <string name="apply_fail_status">Failed to apply new hosts file.</string>
    <string name="by_logging_in_you_agree_to_our_eula_and_privacy_policy">By logging in you agree to our EULA and Privacy Policy</string>
    <string name="log_in">Log in</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="recover_password">Recover password</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_code">Invalid Code!</string>
    <string name="invalid_password">Incorrect Password!</string>
    <string name="enter_your_email_to_reset_it">Enter your email to reset it</string>
    <string name="onboarding_title_1">Block out stimuli</string>
    <string name="onboarding_descriptor_1">100% protection</string>
    <string name="onboarding_description_1">AVLIX can filter any type of content, and you can customize the filtering to suit your needs.</string>
    <string name="explore_your_suite_install_napps_and_more">Explore your suite, install\napps and more!</string>
    <string name="abiable_products">Abiable Products</string>
    <string name="explore_the_total_security_suite">Explore the Total Security Suite</string>
    <string name="let_s_create_an_account_to_use_nexora_on_all_your_devices">Let’s create an account to use Nexora on all your devices</string>
    <string name="choose_a_password">Choose a Password</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="by_updating_your_account_details_you_agree_to_our_eula_and_privacy_policy">By updating your account details you agree to our EULA and Privacy Policy</string>
    <string name="check_your_email">Check your email</string>
    <string name="enter_code">Enter code</string>
    <string name="and_enter_the_one_time_code_from_there">And enter the one-time code from there</string>
    <string name="resend_code">Resend code</string>
    <string name="are_you_sure_you_want_to_delete_the_site">Are you sure you want to delete the site?</string>
    <string name="it_cannot_be_returned_or_restored">it cannot be returned or restored</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="easy_setup">Easy setup</string>
    <string name="activate_adblock_avlyx">Activate Adblock AVLIX</string>
    <string name="go_to_settings">Go to Settings</string>
</resources>