<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_16">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/margin_48"
        android:layout_height="@dimen/margin_48"
        android:layout_marginTop="@dimen/margin_16"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/logo_title"
        style="@style/AppLogoGrey18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/forgot_text"
        style="@style/TextStyleH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:text="@string/forgotten_password" />

    <TextView
        android:id="@+id/enter_email_text"
        style="@style/TextStyleBody2.Gray1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/enter_your_email_to_reset_it" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        style="@style/BaseEpicEditTextWithSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:drawableStart="@drawable/ic_mail_24"
        android:drawablePadding="@dimen/margin_16"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/email_error"
        style="@style/TextStyleBody3.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/invalid_email"
        android:visibility="gone" />

    <TextView
        android:id="@+id/recover_button"
        style="@style/BaseEpicButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:gravity="center"
        android:text="@string/recover_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@color/gray_2" />

    <LinearLayout
        android:id="@+id/no_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/have_account"
            style="@style/TextStyleBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:text="@string/you_already_have_an_account" />

        <TextView
            android:id="@+id/login_button"
            style="@style/TextStyleBody2.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eula_and_policy"
            style="@style/TextStyleBody3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/margin_32"
            android:text="@string/by_logging_in_you_agree_to_our_eula_and_privacy_policy" />
    </FrameLayout>
    >

</LinearLayout>