<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_16">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/margin_48"
        android:layout_height="@dimen/margin_48"
        android:layout_marginTop="@dimen/margin_16"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/logo_title"
        style="@style/AppLogoGrey18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/welcome_text"
        style="@style/TextStyleH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:text="@string/let_s_create_an_account_to_use_nexora_on_all_your_devices"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        style="@style/BaseEpicEditTextWithSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:drawableStart="@drawable/ic_mail_24"
        android:drawablePadding="@dimen/margin_16"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/email_error"
        style="@style/TextStyleBody3.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/invalid_email"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password"
        style="@style/BaseEpicEditTextWithSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawableEnd="@drawable/ic_eye_off_24"
        android:drawablePadding="@dimen/margin_16"
        android:hint="@string/choose_a_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_error"
        style="@style/TextStyleBody3.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/invalid_password"
        android:visibility="gone" />

    <EditText
        android:id="@+id/repeat_password"
        style="@style/BaseEpicEditTextWithSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawableEnd="@drawable/ic_eye_off_24"
        android:drawablePadding="@dimen/margin_16"
        android:hint="@string/choose_a_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/repeat_password_error"
        style="@style/TextStyleBody3.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/invalid_password"
        android:visibility="gone" />

    <TextView
        android:id="@+id/register_button"
        style="@style/BaseEpicButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:gravity="center"
        android:text="@string/save_continue" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eula_and_policy"
            style="@style/TextStyleBody3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/margin_32"
            android:text="@string/by_updating_your_account_details_you_agree_to_our_eula_and_privacy_policy"
            android:textAlignment="center" />
    </FrameLayout>

</LinearLayout>