<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        tools:src="@drawable/onboarding_image_1" />

    <TextView
        android:id="@+id/descriptor"
        style="@style/TextStyleBody2.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_52"
        android:background="@drawable/onboarding_descriptor_background_corner_8"
        android:paddingHorizontal="@dimen/margin_16"
        android:paddingVertical="@dimen/margin_5"
        tools:text="@string/onboarding_descriptor_1" />

    <TextView
        android:id="@+id/title"
        style="@style/TextStyleH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        tools:text="@string/onboarding_title_1" />

    <TextView
        android:id="@+id/description"
        style="@style/TextStyleBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_48"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_24"
        android:gravity="center"
        tools:text="@string/onboarding_description_1" />

</LinearLayout>