<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:gravity="center_horizontal"
        android:scrollbarThumbVertical="@null"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/help_image"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/help_image" />

        <TextView
            android:id="@+id/descriptor"
            style="@style/TextStyleBody2.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/onboarding_descriptor_background_corner_8"
            android:paddingHorizontal="@dimen/margin_16"
            android:paddingVertical="@dimen/margin_5"
            android:text="@string/easy_setup" />

        <TextView
            android:id="@+id/title"
            style="@style/TextStyleH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/activate_adblock_avlyx" />

        <include
            android:id="@+id/help_point_1"
            layout="@layout/help_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16" />

        <include
            android:id="@+id/help_point_2"
            layout="@layout/help_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16" />

        <include
            android:id="@+id/help_point_3"
            layout="@layout/help_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16" />

        <include
            android:id="@+id/help_point_4"
            layout="@layout/help_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/get_permission_button"
                style="@style/BaseEpicButton"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginVertical="@dimen/margin_24"
                android:text="@string/go_to_settings" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>